--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./dist/index.js"
+    "start": "nodemon ./dist/index.js",
+    "build": "npx tsc"
   },
   "keywords": [],
   "author": "",
