--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
@@ -15,7 +16,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./dist/index.js",
-    "build": "npx tsc"
+    "build": "rimraf dist && npx tsc",
+    "dev": "npx tsc -w & nodemon ./dist/index.js"
   },
   "keywords": [],
   "author": "",
